--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/PollApp?serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost}:3306/buildanddestroy?serverTimezone=UTC
 spring.datasource.username=zcuser
 spring.datasource.password=zcpass
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+#spring.profiles.active=h2
+#
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
